# aspia

./: .clangd  .clangd.in  .gitattributes  .gitignore  .gitmodules  3RDPARTY.txt  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  README.txt  THIRD_PARTY.md  THIRD_PARTY.txt  appveyor.yml  aspia-remote-desktop.sln  aspia.sln  aspia.vcxproj  aspia.vcxproj.filters  aspia_config.h  build_config.h  clean.cmd  global.h  libaspia.vcxproj  libaspia.vcxproj.filters  main.cc  remote-desktop.sln  sw.cc  sw.cpp  vcpkg.json  version.rc
source/: .clang-format  CMakeLists.txt  aspia.vcxproj  aspia.vcxproj.filters  aspia_address_book.vcxproj  aspia_core.cmake  aspia_core.rc  aspia_core.vcxproj  aspia_core.vcxproj.filters  aspia_host.vcxproj  aspia_host_launcher.vcxproj  aspia_host_service.vcxproj  aspia_sas_injector.vcxproj  aspia_system_info.vcxproj  build_config.cc  build_config.h  command_line_switches.cc  command_line_switches.h  core_export.h  export.h  global.h  main.cc  sw.cc  translations.cmake  version.h  version.rc
source/address_book/: address_book.cc  address_book.h  address_book.rc  address_book_dialog.cc  address_book_dialog.h  address_book_main.cc  address_book_main.h  address_book_window.cc  address_book_window.h  address_book_window.ui  computer.cc  computer.h  computer_dialog.cc  computer_dialog.h  computer_dialog.ui  computer_group.cc  computer_group.h  computer_group_dialog.cc  computer_group_dialog.h  computer_group_dialog.ui  computer_group_drag.h  computer_group_mime_data.h  computer_group_tree.cc  computer_group_tree.h  computer_tree.cc  computer_tree.h  entry_point.cc  open_address_book_dialog.cc  open_address_book_dialog.h  open_address_book_dialog.ui  resource.rc
source/base/: CMakeLists.txt  aligned_memory.cc  aligned_memory.h  aligned_memory_unittest.cc  application.cc  application.h  applications_reader.cc  applications_reader.h  applications_reader_linux.cc  applications_reader_mac.cc  applications_reader_win.cc  asio_event_dispatcher.cc  asio_event_dispatcher.h  asio_event_dispatcher_unittest.cc  base64.cc  base64.h  base64_constants.cc  base64_constants.h  base64_unittest.cc  base_paths.cc  base_paths.h  base_paths_linux.cc  bitset.h  bitset_unittest.cc  bucket_pool.h  bucket_pool_unittest.cc  byte_array.cc  byte_array.h  byte_order.cc  byte_order.h  clipboard.cc  clipboard.h  command_line.cc  command_line.h  compiler_specific.h  const_buffer.h  converter.h  converter_unittest.cc  core_application.cc  core_application.h  (+251 more)
source/category/: category.cc  category.h  category_application.cc  category_application.h  category_application.pb.h  category_application.proto  category_ata.cc  category_ata.h  category_ata.pb.cc  category_ata.pb.h  category_ata.proto  category_connection.cc  category_connection.h  category_connection.pb.cc  category_connection.pb.h  category_connection.proto  category_cpu.cc  category_cpu.h  category_cpu.pb.h  category_cpu.proto  category_dmi_baseboard.cc  category_dmi_baseboard.h  category_dmi_baseboard.pb.h  category_dmi_baseboard.proto  category_dmi_bios.cc  category_dmi_bios.h  category_dmi_bios.pb.h  category_dmi_bios.proto  category_dmi_cache.cc  category_dmi_cache.h  category_dmi_cache.pb.h  category_dmi_cache.proto  category_dmi_chassis.cc  category_dmi_chassis.h  category_dmi_chassis.pb.cc  category_dmi_chassis.pb.h  category_dmi_chassis.proto  category_dmi_memory_device.cc  category_dmi_memory_device.h  category_dmi_memory_device.pb.cc  (+170 more)
source/client/: CMakeLists.txt  Info.plist  Info.plist.in  aab_importer.cc  address_book_importer.cc  address_book_importer.h  application.cc  application.h  audio_output.cc  audio_output.h  audio_output_android.cc  audio_output_android.h  audio_output_mac.cc  audio_output_mac.h  audio_output_pulse.cc  audio_output_pulse.h  audio_output_win.cc  audio_output_win.h  audio_player.cc  audio_player.h  audio_renderer.h  book_data.h  book_database.cc  book_database.h  client.cc  client.h  client.qrc  client.rc  client_authenticator.cc  client_authenticator.h  client_authenticator_srp.cc  client_authenticator_srp.h  client_channel.cc  client_channel.h  client_config.cc  client_config.h  client_connections.cc  client_connections.h  client_desktop.cc  client_desktop.h  (+202 more)
source/cmake/: FindWDK.cmake  Utils.cmake  tbb.cmake  translations.cmake
source/codec/: CMakeLists.txt  compressor.h  compressor_zlib.cc  compressor_zlib.h  compressor_zlib_unittest.cc  compressor_zstd.cc  compressor_zstd.h  compressor_zstd_unittest.cc  cursor_decoder.cc  cursor_decoder.h  cursor_encoder.cc  cursor_encoder.h  decompressor.h  decompressor_zlib.cc  decompressor_zlib.h  decompressor_zstd.cc  decompressor_zstd.h  encoder_bitrate_filter.cc  encoder_bitrate_filter.h  pixel_translator.cc  pixel_translator.h  running_samples.cc  running_samples.h  scale_reducer.cc  scale_reducer.h  scoped_vpx_codec.cc  scoped_vpx_codec.h  scoped_zstd_dict.cc  scoped_zstd_dict.h  scoped_zstd_stream.cc  scoped_zstd_stream.h  video_decoder.cc  video_decoder.h  video_decoder_vpx.cc  video_decoder_vpx.h  video_decoder_zlib.cc  video_decoder_zlib.h  video_decoder_zstd.cc  video_decoder_zstd.h  video_encoder.cc  (+14 more)
source/common/: CMakeLists.txt  clipboard.cc  clipboard.h  clipboard_android.cc  clipboard_android.h  clipboard_file_transfer.cc  clipboard_file_transfer.h  clipboard_mac.h  clipboard_mac.mm  clipboard_monitor.cc  clipboard_monitor.h  clipboard_win.cc  clipboard_win.h  clipboard_x11.cc  clipboard_x11.h  desktop_session_constants.cc  desktop_session_constants.h  file_depacketizer.cc  file_depacketizer.h  file_enumerator.cc  file_enumerator.h  file_enumerator_fs.cc  file_enumerator_win.cc  file_packet.h  file_packetizer.cc  file_packetizer.h  file_platform_util.h  file_platform_util_android.cc  file_platform_util_linux.cc  file_platform_util_mac.mm  file_platform_util_win.cc  file_request.cc  file_request.h  file_request_consumer.h  file_request_consumer_proxy.cc  file_request_consumer_proxy.h  file_request_handler.cc  file_request_handler.h  (+37 more)
(+5229 files in other folders)
